name:                alphavantage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskeleton#readme
license:             BSD3
author:              Steve Severance
maintainer:          sseverance@alphaheavy.com
copyright:           2017 Alpha Heavy Industries
category:            Finance
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Finance.AlphaVantage
  other-modules:       Finance.AlphaVantage.Types
  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    cassava,
    exceptions,
    http-client,
    mtl,
    text,
    time,
    vector,
    Decimal
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskeleton
